--- a/LoanManagementSystem/Content/skins/skin-blue.css
+++ b/LoanManagementSystem/Content/skins/skin-blue.css
@@ -58,15 +58,15 @@
 .skin-blue .wrapper,
 .skin-blue .main-sidebar,
 .skin-blue .left-side {
-  background-color: #222d32;
+  background-color: #f5f5f5;
 }
 .skin-blue .user-panel > .info,
 .skin-blue .user-panel > .info > a {
   color: #fff;
 }
 .skin-blue .sidebar-menu > li.header {
-  color: #4b646f;
-  background: #1a2226;
+  color: #ff6a00;
+  background: #f2f2f2;
 }
 .skin-blue .sidebar-menu > li > a {
   border-left: 3px solid transparent;
@@ -79,7 +79,7 @@
 }
 .skin-blue .sidebar-menu > li > .treeview-menu {
   margin: 0 1px;
-  background: #2c3b41;
+  background: #f1f1f1;
 }
 .skin-blue .sidebar a {
   color: #b8c7ce;
