--- a/LoanManagementSystem/Content/Layout.css
+++ b/LoanManagementSystem/Content/Layout.css
@@ -802,7 +802,7 @@ a:focus {
 }
 .control-sidebar-dark,
 .control-sidebar-dark + .control-sidebar-bg {
-  background: #222d32;
+  background: #f5f5f5;
 }
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs {
   border-bottom: #1c2529;
@@ -829,7 +829,7 @@ a:focus {
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs > li.active > a:hover,
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs > li.active > a:focus,
 .control-sidebar-dark .nav-tabs.control-sidebar-tabs > li.active > a:active {
-  background: #222d32;
+  background: #f5f5f5;
   color: #fff;
 }
 .control-sidebar-dark .control-sidebar-heading,
@@ -2723,7 +2723,7 @@ table.text-center th {
   bottom: 0;
   height: 250px;
   width: 100%;
-  background: #222d32;
+  background: #f5f5f5;
   color: #fff;
   overflow: auto;
 }
