--- a/LoanManagementSystem/Content/less/direct-chat.less
+++ b/LoanManagementSystem/Content/less/direct-chat.less
@@ -109,7 +109,7 @@
   bottom: 0;
   height: 250px;
   width: 100%;
-  background: #222d32;
+  background: #f5f5f5;
   color: #fff;
   overflow: auto;
 }
