--- a/LoanManagementSystem/Content/less/variables.less
+++ b/LoanManagementSystem/Content/less/variables.less
@@ -47,7 +47,7 @@
 //--------------------------------------------------------
 
 //Dark sidebar
-@sidebar-dark-bg:                  #222d32;
+@sidebar-dark-bg:                  #f5f5f5;
 @sidebar-dark-hover-bg:            darken(@sidebar-dark-bg, 2%);
 @sidebar-dark-color:               lighten(@sidebar-dark-bg, 60%);
 @sidebar-dark-hover-color:         #fff;
