--- a/LoanManagementSystem/Content/skins/_all-skins.css
+++ b/LoanManagementSystem/Content/skins/_all-skins.css
@@ -58,15 +58,15 @@
 .skin-blue .wrapper,
 .skin-blue .main-sidebar,
 .skin-blue .left-side {
-  background-color: #222d32;
+  background-color: #f5f5f5;
 }
 .skin-blue .user-panel > .info,
 .skin-blue .user-panel > .info > a {
   color: #fff;
 }
 .skin-blue .sidebar-menu > li.header {
-  color: #4b646f;
-  background: #1a2226;
+  color: #ff6a00;
+  background: #f2f2f2;
 }
 .skin-blue .sidebar-menu > li > a {
   border-left: 3px solid transparent;
@@ -79,7 +79,7 @@
 }
 .skin-blue .sidebar-menu > li > .treeview-menu {
   margin: 0 1px;
-  background: #2c3b41;
+  background: #f1f1f1;
 }
 .skin-blue .sidebar a {
   color: #b8c7ce;
@@ -385,15 +385,15 @@
 .skin-black .wrapper,
 .skin-black .main-sidebar,
 .skin-black .left-side {
-  background-color: #222d32;
+  background-color: #f5f5f5;
 }
 .skin-black .user-panel > .info,
 .skin-black .user-panel > .info > a {
   color: #fff;
 }
 .skin-black .sidebar-menu > li.header {
-  color: #4b646f;
-  background: #1a2226;
+  color: #ff6a00;
+  background: #f2f2f2;
 }
 .skin-black .sidebar-menu > li > a {
   border-left: 3px solid transparent;
@@ -406,7 +406,7 @@
 }
 .skin-black .sidebar-menu > li > .treeview-menu {
   margin: 0 1px;
-  background: #2c3b41;
+  background: #f1f1f1;
 }
 .skin-black .sidebar a {
   color: #b8c7ce;
@@ -693,15 +693,15 @@
 .skin-green .wrapper,
 .skin-green .main-sidebar,
 .skin-green .left-side {
-  background-color: #222d32;
+  background-color: #f5f5f5;
 }
 .skin-green .user-panel > .info,
 .skin-green .user-panel > .info > a {
   color: #fff;
 }
 .skin-green .sidebar-menu > li.header {
-  color: #4b646f;
-  background: #1a2226;
+  color: #ff6a00;
+  background: #f2f2f2;
 }
 .skin-green .sidebar-menu > li > a {
   border-left: 3px solid transparent;
@@ -714,7 +714,7 @@
 }
 .skin-green .sidebar-menu > li > .treeview-menu {
   margin: 0 1px;
-  background: #2c3b41;
+  background: #f1f1f1;
 }
 .skin-green .sidebar a {
   color: #b8c7ce;
@@ -981,15 +981,15 @@
 .skin-red .wrapper,
 .skin-red .main-sidebar,
 .skin-red .left-side {
-  background-color: #222d32;
+  background-color: #f5f5f5;
 }
 .skin-red .user-panel > .info,
 .skin-red .user-panel > .info > a {
   color: #fff;
 }
 .skin-red .sidebar-menu > li.header {
-  color: #4b646f;
-  background: #1a2226;
+  color: #ff6a00;
+  background: #f2f2f2;
 }
 .skin-red .sidebar-menu > li > a {
   border-left: 3px solid transparent;
@@ -1002,7 +1002,7 @@
 }
 .skin-red .sidebar-menu > li > .treeview-menu {
   margin: 0 1px;
-  background: #2c3b41;
+  background: #f1f1f1;
 }
 .skin-red .sidebar a {
   color: #b8c7ce;
@@ -1269,15 +1269,15 @@
 .skin-yellow .wrapper,
 .skin-yellow .main-sidebar,
 .skin-yellow .left-side {
-  background-color: #222d32;
+  background-color: #f5f5f5;
 }
 .skin-yellow .user-panel > .info,
 .skin-yellow .user-panel > .info > a {
   color: #fff;
 }
 .skin-yellow .sidebar-menu > li.header {
-  color: #4b646f;
-  background: #1a2226;
+  color: #ff6a00;
+  background: #f2f2f2;
 }
 .skin-yellow .sidebar-menu > li > a {
   border-left: 3px solid transparent;
@@ -1290,7 +1290,7 @@
 }
 .skin-yellow .sidebar-menu > li > .treeview-menu {
   margin: 0 1px;
-  background: #2c3b41;
+  background: #f1f1f1;
 }
 .skin-yellow .sidebar a {
   color: #b8c7ce;
@@ -1557,15 +1557,15 @@
 .skin-purple .wrapper,
 .skin-purple .main-sidebar,
 .skin-purple .left-side {
-  background-color: #222d32;
+  background-color: #f5f5f5;
 }
 .skin-purple .user-panel > .info,
 .skin-purple .user-panel > .info > a {
   color: #fff;
 }
 .skin-purple .sidebar-menu > li.header {
-  color: #4b646f;
-  background: #1a2226;
+  color: #ff6a00;
+  background: #f2f2f2;
 }
 .skin-purple .sidebar-menu > li > a {
   border-left: 3px solid transparent;
@@ -1578,7 +1578,7 @@
 }
 .skin-purple .sidebar-menu > li > .treeview-menu {
   margin: 0 1px;
-  background: #2c3b41;
+  background: #f1f1f1;
 }
 .skin-purple .sidebar a {
   color: #b8c7ce;
