--- a/LoanManagementSystem/Content/skins/skin-black.css
+++ b/LoanManagementSystem/Content/skins/skin-black.css
@@ -78,15 +78,15 @@
 .skin-black .wrapper,
 .skin-black .main-sidebar,
 .skin-black .left-side {
-  background-color: #222d32;
+  background-color: #f5f5f5;
 }
 .skin-black .user-panel > .info,
 .skin-black .user-panel > .info > a {
   color: #fff;
 }
 .skin-black .sidebar-menu > li.header {
-  color: #4b646f;
-  background: #1a2226;
+  color: #ff6a00;
+  background: #f2f2f2;
 }
 .skin-black .sidebar-menu > li > a {
   border-left: 3px solid transparent;
@@ -99,7 +99,7 @@
 }
 .skin-black .sidebar-menu > li > .treeview-menu {
   margin: 0 1px;
-  background: #2c3b41;
+  background: #f1f1f1;
 }
 .skin-black .sidebar a {
   color: #b8c7ce;
