--- a/LoanManagementSystem/Views/Member/Create.cshtml
+++ b/LoanManagementSystem/Views/Member/Create.cshtml
@@ -7,18 +7,18 @@
 
 @*<h2>Create a Member</h2>*@
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Member", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal"> 
+
+    <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.CompanyId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.Code, new { @class = "control-label col-md-2" })
-             
+
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Code)
                 @Html.ValidationMessageFor(model => model.Code)
@@ -38,10 +38,17 @@
                 @Html.EditorFor(model => model.LastName)
                 @Html.ValidationMessageFor(model => model.LastName)
             </div>
-        </div>        
-
+        </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Description,"Remarks", new { @class = "control-label col-md-2" })
+            @Html.Label("Profile Image", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input name="ProfileImage" type="file" />
+                @*@Html.TextBoxFor(m => m.Logo, new { type = "file" })*@
+                @*@Html.ValidationMessageFor(model => model.CompanyName)*@
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Description, "Remarks", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Description)
                 @Html.ValidationMessageFor(model => model.Description)
@@ -49,36 +56,36 @@
         </div>
 
         @*<div class="form-group">
-            @Html.LabelFor(model => model.UserGroupId, "UserGroupId", new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("UserGroupId", String.Empty)
-                @Html.ValidationMessageFor(model => model.UserGroupId)
-            </div>
-        </div>*@
+                @Html.LabelFor(model => model.UserGroupId, "UserGroupId", new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("UserGroupId", String.Empty)
+                    @Html.ValidationMessageFor(model => model.UserGroupId)
+                </div>
+            </div>*@
 
         @*<div class="form-group">
-            @Html.LabelFor(model => model.IsActive, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.IsActive)
-                @Html.ValidationMessageFor(model => model.IsActive)
-            </div>
-        </div>*@
+                @Html.LabelFor(model => model.IsActive, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.IsActive)
+                    @Html.ValidationMessageFor(model => model.IsActive)
+                </div>
+            </div>*@
 
         @*<div class="form-group">
-            @Html.LabelFor(model => model.Designation, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Designation)
-                @Html.ValidationMessageFor(model => model.Designation)
+                @Html.LabelFor(model => model.Designation, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Designation)
+                    @Html.ValidationMessageFor(model => model.Designation)
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserType, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserType)
-                @Html.ValidationMessageFor(model => model.UserType)
-            </div>
-        </div>*@
+            <div class="form-group">
+                @Html.LabelFor(model => model.UserType, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.UserType)
+                    @Html.ValidationMessageFor(model => model.UserType)
+                </div>
+            </div>*@
         <h4>Communication Address</h4>
 
         <div class="form-group">
@@ -130,8 +137,8 @@
                 @Html.EditorFor(model => model.Contacts.Telephone1)
                 @Html.ValidationMessageFor(model => model.Contacts.Telephone1)
             </div>
-        </div> 
-        
+        </div>
+
         <h4>Permanent Address</h4>
 
         <div class="form-group">
@@ -170,14 +177,14 @@
                 @Html.ValidationMessageFor(model => model.PermanentAddress.District)
             </div>
         </div>
-         
+
         <div class="form-group">
             @Html.LabelFor(model => model.PermanentContacts.Telephone1, "Phone", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PermanentContacts.Telephone1)
                 @Html.ValidationMessageFor(model => model.PermanentContacts.Telephone1)
             </div>
-        </div> 
+        </div>
 
         <h4>Guaranter Details</h4>
 
@@ -210,7 +217,7 @@
                 @Html.ValidationMessageFor(model => model.Occupation)
             </div>
         </div>
-         
+
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
