--- a/LoanManagementSystem/Views/Shared/_LoginPartial.cshtml
+++ b/LoanManagementSystem/Views/Shared/_LoginPartial.cshtml
@@ -1,16 +1,22 @@
 ﻿@using Microsoft.AspNet.Identity
-@if (Request.IsAuthenticated)
+@using (Html.BeginForm("LogOff", "User", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
 {
-    using (Html.BeginForm("LogOff", "User", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
-    {
-        @Html.AntiForgeryToken()
+    @Html.AntiForgeryToken()
 
-        <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-right">
+        @if (Request.IsAuthenticated)
+        {
             <li>
                 @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
             </li>
             @*<li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>*@
             <li>@Html.ActionLink("Sign out", "LogOff", "User", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-        </ul>
-    }
+        }
+        else
+        {
+            <li>
+                @Html.ActionLink("Sign In", "Login", "User", routeValues: null, htmlAttributes: new { id = "loginLink" })
+            </li>
+        }
+    </ul>
 }
