--- a/LoanManagementSystem/Views/Executive/Index.cshtml
+++ b/LoanManagementSystem/Views/Executive/Index.cshtml
@@ -10,61 +10,74 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        
-        <th>
-            @Html.DisplayNameFor(model => model.Code)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Contacts.Telephone1)
-        </th>
-       
-        <th>
-            @Html.DisplayNameFor(model => model.Designation)
-        </th>
-        @*<th>
-            @Html.DisplayNameFor(model => model.UserType)
-        </th>*@
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        
-        <td>
-            @Html.DisplayFor(modelItem => item.Code)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Contacts.Telephone1)
-        </td>
-        @*<td>
-            @Html.DisplayFor(modelItem => item.IsActive)
-        </td>*@
-        <td>
-            @Html.DisplayFor(modelItem => item.Designation)
-        </td>
-        @*<td>
-            @Html.DisplayFor(modelItem => item.UserType)
-        </td>*@
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.UserID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.UserID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.UserID })
-        </td>
-    </tr>
+@section scripts {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            // prepare the data
+            var source =
+            {
+                dataType: "json",
+                dataFields: [
+                    { name: 'UserID', type: 'number' },
+                    { name: 'Code', type: 'string' },
+                    { name: 'FirstName', type: 'string' },
+                    { name: 'LastName', type: 'string' },
+                     { name: 'Designation', type: 'string' },
+                    { name: 'ExecutiveInfo', type: 'number' },
+
+                ],
+                id: 'UserID',
+                url: '/Executive/ExecutiveInfo'
+            };
+
+            var linkrenderer = function (row, column, value) {
+                //if (value.indexOf('#') != -1) {
+                //    value = value.substring(0, value.indexOf('#'));
+                //}
+                //var format = { target: '"_blank"' };
+                //var html = $.jqx.dataFormat.formatlink(value, format);
+                var html = '<b><a href="/Executive/Edit/' + value + '">Edit</a>|<a id="lnpayment" href="/Executive/Details/' + value + '">Details</a>'
+                          + ' | <a href="/Executive/Delete/' + value + '">Delete</a>';
+                return html;
+            }
+            var dataAdapter = new $.jqx.dataAdapter(source);
+            // create Tree Grid
+            var gridInfo = $("#dataTable").jqxDataTable(
+            {
+                width: 1050,
+                source: dataAdapter,
+                theme: 'arctic',
+                pageSize: 5,
+                sortable: true,
+                filterable: true,
+                pageable: true,
+                columns: [
+                  { text: 'Executive Id', dataField: 'UserID', width: 120 },
+                  { text: 'Code', dataField: 'Code', width: 120 },
+                  { text: 'First Name', dataField: 'FirstName', width: 200 },
+                  { text: 'Last Name', dataField: 'LastName', width: 160 },
+
+                  { text: 'Designation', dataField: 'Designation', width: 150 },
+
+                  {
+                      text: 'Edit', dataField: 'ExecutiveInfo', cellsAlign: 'center', align: "center", editable: false, sortable: false, width: 300,
+                      cellsRenderer: linkrenderer
+                  }
+                ]
+            });
+        });
+    </script>
+}
+<div id="dataTable"></div>
+
+@helper CustomRenderActionColumn(LoanManagementSystem.Models.sdtoUser User)
+{
+    <b>
+        @Html.ActionLink("Edit", "Edit", new { id = User.UserID }) | @Html.ActionLink("Details", "Details", new { id = User.UserID }) | @Html.ActionLink("Delete", "Delete", new { id = User.UserID })
+        |
+    </b>
 }
 
-</table>
+
+
